syntax = "proto3";

package services.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/q-controller/qcontroller/src/generated/services/v1;v1";

message CreateInterfaceRequest {
    string name = 1;
}

message RemoveInterfaceRequest {
    string name = 1;
}

service NetworkManagerService {
    rpc CreateInterface(CreateInterfaceRequest) returns (google.protobuf.Empty) {}
    rpc RemoveInterface(RemoveInterfaceRequest) returns (google.protobuf.Empty) {}
}
